@@ -184,6 +184,7 @@ Version 1.13.0-dev:
    * Fix bug #22123 "Replays don't reset map when reset button is pressed, causing OOS"
    * Wesnoth reports an error if it evalutes [if] and finds no [then], [else], [elseif]
      children, as a chat message from lua.
+   * Fix bug #22134: Campaign prefix not used in mp campaign saves
 
 Version 1.11.11:
  * Add-ons server:
